# poste-http.nvim

./: .gitignore  .luacheckrc  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LEARNINGS.md  PERFORMANCE_ANALYSIS.md  PROGRESS.md  README.md  README_PLUGIN.md  REFACTORING_PLAN.md  ROADMAP.md  TEST_PLUGIN.md  TODO-sql-completion.md  TODO.md  chat.md  connections.json  conversation-2026-06-07-151031.md  test_completion.http  test_select.http
.opencode/: opencode.json
crates/poste-cli/: Cargo.toml  build.rs
crates/poste-cli/src/: connection.rs  context.rs  import.rs  introspect.rs  main.rs  run.rs  serve.rs  util.rs
crates/poste-cli/tests/: cli_context_serve.rs
crates/poste-exec/: Cargo.toml
crates/poste-exec/src/: executor.rs  lib.rs  response.rs  sql_connection.rs  sql_ddl.rs  sql_dialect.rs  sql_executor.rs  sql_introspect.rs
crates/poste-exec/src/sql_executor/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
crates/poste-exec/src/sql_introspect/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
dev/: config.lua  deps.lua  settings.lua  start.sh  teardown.sh
doc/: poste.txt  tags
docs/: README.md  dataset-ui-edit-impl.md  http-format-design.md  http-impl-guide.md  http-syntax.md  refactoring-report.md  sql-completion-todo.md  sql-design.md
examples/: README_form_data.md  README_request_variables.md  api.http  cache.redis  env.json  form_data.http  magic_vars.http  md5_auth.http  prompt_variables.http  queries.sql  redis_test.redis  request_variables.http  test.redis  test_assertions.http  test_dynamic_prompts.http  test_env_vars.http  test_prompt_completion.http  test_scripts.http  variables.http
experiments/: prototype.lua
ftdetect/: poste.vim
ftplugin/: poste_http.vim  poste_redis.vim  poste_sql.vim
parser/: node-types.json
plugin/: poste.lua
syntax/: poste_dataset.vim  poste_http.vim  poste_sql.vim
tests/: bench_dataset.lua  bench_dataset_driver.lua  bench_run.sh  build_items_spec.lua  completion_coverage_spec.lua  completion_spec.lua  detect_context_spec.lua  diag_sql.lua  diag_stmt.lua  diag_winbar.lua  dx_completion_spec.lua  event_bus_spec.lua  grammar_spec.sh  http_image_preview_spec.lua  injection_spec.sh  minimal_init.lua  promise_spec.lua  run.sh  script_completion_spec.lua  sql_completion_edge_spec.lua  sql_completion_spec.lua  sql_log_viewer_spec.lua  sql_multi_stmt_spec.lua  state_contract_spec.lua  test_block_boundary_spec.lua  util_spec.lua  (+4 more)
(+271 files in other folders)
