[package]
name = "poste-exec"
version.workspace = true
edition.workspace = true

[dependencies]
poste-core = { path = "../poste-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Protocol clients
reqwest = { version = "0.12", features = ["json"] }
# redis = "0.27"
# sqlx = { version = "0.8", features = ["postgres", "mysql"] }
# mongodb = "3"
