[package]
name = "poste-exec"
version.workspace = true
edition.workspace = true

[dependencies]
poste-core = { path = "../poste-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
regex.workspace = true

# HTTP: curl subprocess (gives verbose trace for free)
tempfile = "3"
chrono = "0.4"
dirs = "6"

# Redis
redis = { version = "0.27", features = ["tokio-comp"] }

# SQL (PostgreSQL, MySQL, SQLite)
sqlx.workspace = true
